--- a/src/components/schedule/schedule.module.css
+++ b/src/components/schedule/schedule.module.css
@@ -1,8 +1,15 @@
+.container {
+  display: flex;
+  justify-content: center;
+  width: 98vw;
+  border-radius: 10px;
+  background-color: #444;
+}
+
 .grilla {
   color: white;
-  width: 100vw;
+  width: 100%;
   padding: 10px 0;
-  border-top: 1px solid red;
 }
 
 table {
@@ -26,8 +33,8 @@ table {
   border: 1px solid white;
 }
 
-th,
-td {
+.th,
+.td {
   max-width: 13vw;
   font-size: 11px;
   height: 2.2vw;
@@ -35,7 +42,7 @@ td {
   text-overflow: ellipsis;
 }
 
-th {
+.th {
   color: red;
 }
 
@@ -46,48 +53,16 @@ th {
   font-size: 8px;
 }
 
-.modalOpen {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(44, 44, 44, 0.7);
+.modalContent {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto';
-  font-weight: bold;
-  color: #373867;
-}
-
-.modalClosed {
-  display: none;
-}
-
-.modal {
-  display: flex;
-  position: absolute;
-  z-index: 2;
   flex-direction: column;
-  padding: 0 20px 20px;
-  border-radius: 30px;
-  min-width: 20vw;
-  min-height: 5vw;
-  background-color: black;
-  color: white;
-}
-
-.title {
-  display: flex;
-  justify-content: space-between;
+  text-align: center;
 }
 
 .nombreClase {
   color: red;
   font-size: 30px;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .pInfo {
@@ -139,25 +114,7 @@ th {
 }
 
 .addBtn:hover {
-  color: white;
-  background-color: green;
-}
-
-.closeBtn {
-  position: relative;
-  top: 5px;
-  right: -10px;
-  color: white;
-  height: 20px;
-  width: 20px;
-  text-align: center;
-  font-size: 30px;
-  padding-bottom: 7px;
-  cursor: pointer;
-}
-
-.closeBtn:hover {
-  color: red;
+  background-color: palegreen;
 }
 
 .alumnosBtn {
@@ -175,18 +132,22 @@ th {
 }
 
 @media only screen and (min-width: 601px) {
+  .container {
+    width: 90vw;
+    margin: 20px 0;
+  }
   .grilla {
     width: 80vw;
     height: 820px;
   }
-  table {
+  .table {
     border-bottom: 1px dashed white;
   }
-  td {
-    font-size: 24px;
+  .td {
+    font-size: 20px;
   }
 
-  th {
+  .th {
     font-size: 36px;
   }
   .empty,
@@ -199,6 +160,10 @@ th {
     width: 14vw;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+  .activeClass {
+    border-width: 1px;
+    background-color: rgba(141, 112, 103, 0.404);
   }
   .activeClass:hover {
     color: white;
