--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
