--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -2,22 +2,42 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90vw;
-  height: 400px;
-  border-radius: 20px;
-  background-color: #888;
+  justify-content: center;
+  height: 80vh;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  align-items: space-between;
-  gap: 20px;
-  width: 60vw;
+  align-items: center;
+  gap: 40px;
+  width: 90vw;
+  height: 400px;
+  border-radius: 20px;
+  background-color: #444;
+  color: white;
 }
 
 .formField {
   display: flex;
   flex-direction: column;
-  width: ;
+  gap: 10px;
+  width: 70vw;
+}
+
+.formLabel {
+  font-weight: bold;
+}
+
+.formInput {
+  height: 25px;
+  border-radius: 8px;
+  border: none;
+}
+
+.formBtns {
+  display: flex;
+  justify-content: space-around;
+  width: 60vw;
+  margin-top: 15px;
 }
