--- a/src/components/shared/header/header.module.css
+++ b/src/components/shared/header/header.module.css
@@ -15,11 +15,10 @@
 
 .menu {
   position: fixed;
-  right: 0;
+  left: 0;
   top: -25px;
-  height: 100px;
   width: 360px;
-  padding-top: 15px;
+  padding: 15px 0;
   pointer-events: none;
   background-color: black;
   opacity: 0;
