--- a/src/app.module.css
+++ b/src/app.module.css
@@ -3,5 +3,6 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  padding-top: 60px;
+  padding-top: 10vh;
+  min-height: 80vh;
 }
