--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -3,7 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /*   background-image: url('../../../public/assets/images/background.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover; */
   height: 80vh;
+  width: 100vw;
 }
 
 .form {
@@ -14,7 +18,8 @@
   width: 90vw;
   height: 400px;
   border-radius: 20px;
-  background-color: #444;
+  border: 1px solid red;
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
 }
 
