--- a/src/components/schedule/schedule.module.css
+++ b/src/components/schedule/schedule.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 98vw;
   border-radius: 10px;
   background-color: #444;
@@ -131,6 +132,18 @@ table {
   background-color: #990000;
 }
 
+.newClassBtn {
+  width: 35vw;
+}
+
+.notAdmin {
+  display: none;
+}
+
+.deleteClass {
+  background-color: red;
+}
+
 @media only screen and (min-width: 601px) {
   .container {
     width: 90vw;
@@ -183,5 +196,8 @@ table {
     border-style: dashed;
     font-size: 24px;
     border-width: 1px 1px 0;
+  }
+  .deleteClass {
+    background-color: red;
   }
 }
