--- a/src/components/shared/header/header.module.css
+++ b/src/components/shared/header/header.module.css
@@ -5,11 +5,11 @@
   left: 0;
   justify-content: space-between;
   align-items: center;
-  height: 59px;
+  height: 9.9vh;
   width: 90vw;
-  border-bottom: 1px solid red;
+  border-bottom: 0.1vh solid #ff0000;
   padding: 0 5vw;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
 
@@ -27,7 +27,8 @@
 
 .menuActive {
   position: fixed;
-  top: 60px;
+  width: 100vw;
+  top: 10vh;
   opacity: 1;
   pointer-events: auto;
   transition: top 0.5s ease, opacity 1s ease;
