--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  min-height: 100vh;
+  margin: 0;
+  background-image: url('../public/assets/images/background.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 a {
   text-decoration: none;
   color: inherit;
