--- a/src/components/members/form/form.module.css
+++ b/src/components/members/form/form.module.css
@@ -19,16 +19,16 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 500px;
 }
 
 .formField {
   display: flex;
   justify-content: space-around;
+  row-gap: 5px;
   flex-wrap: wrap;
   align-items: center;
   width: 80vw;
-  height: 40px;
+  margin-bottom: 10px;
 }
 
 .selectField {
@@ -85,14 +85,19 @@
   display: flex;
   align-items: center;
   height: 30px;
-  margin: 0;
-  color: #f23f4285;
-  font-weight: bo;
-  border-radius: 15px;
+  margin-left: auto;
+  width: 80vw;
+  background-color: #f23f4285;
+  border-radius: 5px;
   font-size: 12px;
+  height: 20px;
 }
 
-/* .hidden {
-  height: 30px;
+.errorMsg {
+  margin-left: 7px;
+}
+
+.hidden {
+  height: 20px;
   visibility: hidden;
-} */
+}
