--- a/src/components/members/list/list.module.css
+++ b/src/components/members/list/list.module.css
@@ -19,13 +19,14 @@
 }
 
 .th {
-  width: 20vw;
   text-align: start;
+  width: 20vw;
 }
 
 .trHead {
   display: flex;
-  justify-content: space-around;
+  width: 90vw;
+  justify-content: space-between;
   border-bottom: 1px solid white;
   margin-bottom: 10px;
 }
