--- a/src/components/schedule/schedule.module.css
+++ b/src/components/schedule/schedule.module.css
@@ -27,7 +27,8 @@
 }
 
 .empty,
-.activeClass {
+.activeClass,
+.inactiveClass {
   border-color: black;
   border-style: solid;
   border-width: 1px 1px 0;
@@ -51,6 +52,12 @@
 }
 .activeClass {
   background-color: palegreen;
+  text-align: center;
+  border: 1px solid black;
+}
+
+.inactiveClass {
+  background-color: #ddd;
   text-align: center;
   border: 1px solid black;
 }
