--- a/src/components/shared/header/header.module.css
+++ b/src/components/shared/header/header.module.css
@@ -13,6 +13,10 @@
   color: white;
 }
 
+.active {
+  color: red;
+}
+
 .menu {
   position: fixed;
   left: 0;
@@ -46,6 +50,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .li {
