--- a/src/components/landing/landing.module.css
+++ b/src/components/landing/landing.module.css
@@ -2,10 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
-  background-image: url('../../../public/assets/images/background.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .empiezaHoy {
@@ -52,7 +48,7 @@
   width: 220px;
   margin: 15px 0 0 0;
   font-size: 24px;
-  color: red;
+  color: #924b4b;
 }
 
 .activityText {
@@ -74,7 +70,7 @@
     width: 20vw;
   }
   .btn:hover {
-    border-color: red;
+    border-color: #924b4b;
     background-color: black;
     color: white;
   }
@@ -87,10 +83,5 @@
   }
   .card {
     margin: 50px;
-  }
-  .card:hover {
-    border-color: red;
-    cursor: pointer;
-    transform: translateY(-5px);
   }
 }
