--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -3,9 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /*   background-image: url('../../../public/assets/images/background.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover; */
   height: 80vh;
   width: 100vw;
 }
@@ -16,9 +13,9 @@
   align-items: center;
   gap: 40px;
   width: 90vw;
-  height: 400px;
   border-radius: 20px;
-  border: 1px solid red;
+  border: 1px solid #924b4b;
+  padding-bottom: 35px;
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
 }
@@ -28,6 +25,24 @@
   flex-direction: column;
   gap: 10px;
   width: 70vw;
+}
+
+.cancelBtn {
+  background-color: #924b4b;
+  color: white;
+  width: 30vw;
+  height: 40px;
+}
+
+.addBtn {
+  order: 2;
+  background-color: palegreen;
+  width: 30vw;
+  height: 40px;
+}
+
+.btn:hover {
+  box-shadow: 0 0 5px white;
 }
 
 .formLabel {
@@ -43,6 +58,26 @@
 .formBtns {
   display: flex;
   justify-content: space-around;
-  width: 60vw;
-  margin-top: 15px;
+  gap: 20px;
+  width: 70vw;
+}
+
+.error {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  width: 70vw;
+  background-color: #f23f4285;
+  border-radius: 5px;
+  font-size: 12px;
+  height: 20px;
+}
+
+.errorMsg {
+  margin-left: 7px;
+}
+
+.hidden {
+  height: 20px;
+  visibility: hidden;
 }
