--- a/src/components/members/list/list.module.css
+++ b/src/components/members/list/list.module.css
@@ -3,8 +3,9 @@
   color: white;
   margin: 20px;
   border-radius: 10px;
-  padding-bottom: 10px;
-  background-color: #444;
+  border: 1px solid #924b4b;
+  padding-bottom: 35px;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .list {
@@ -15,7 +16,7 @@
 
 .titleList {
   text-align: center;
-  color: red;
+  color: #924b4b;
 }
 
 .th {
