--- a/src/components/schedule/schedule.module.css
+++ b/src/components/schedule/schedule.module.css
@@ -6,7 +6,9 @@
   width: 98vw;
   border-radius: 10px;
   margin: 10px 0;
-  background-color: #aaa;
+  border: 1px solid #924b4b;
+  padding-bottom: 35px;
+  background-color: rgba(0, 0, 0, 0.7);
   min-height: 80vh;
 }
 .loader {
@@ -14,7 +16,7 @@
   z-index: 1;
 }
 .grilla {
-  color: black;
+  color: white;
   width: 100%;
   padding: 10px 0;
 }
@@ -23,26 +25,27 @@
   border-collapse: collapse;
   margin: auto;
   width: 95%;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #924b4b;
 }
 
 .empty,
 .activeClass,
 .inactiveClass {
-  border-color: black;
+  border-color: #924b4b;
   border-style: solid;
   border-width: 1px 1px 0;
   width: 16vw;
+  color: black;
 }
 
 .interHour {
   border: none;
-  border-color: black;
+  border-color: #924b4b;
   border-style: solid;
   border-width: 0 1px;
 }
 .hours {
-  border-color: black;
+  border-color: #924b4b;
   border-style: solid;
   border-width: 1px 1px 0;
 }
@@ -51,7 +54,7 @@
   width: 5vw;
 }
 .activeClass {
-  background-color: palegreen;
+  background-color: rgba(152, 251, 152, 0.7);
   text-align: center;
   border: 1px solid black;
 }
@@ -72,7 +75,7 @@
 }
 
 .th {
-  color: red;
+  color: #924b4b;
 }
 
 .hours {
@@ -91,7 +94,7 @@
 }
 
 .nombreClase {
-  color: red;
+  color: #924b4b;
   font-size: 30px;
   margin: 0;
 }
@@ -127,7 +130,7 @@
 
 .removeBtn:hover {
   color: black;
-  background-color: red;
+  background-color: #924b4b;
 }
 
 .subTitle {
@@ -151,7 +154,7 @@
 .alumnosBtn {
   align-self: center;
   margin-top: 20px;
-  background-color: red;
+  background-color: #924b4b;
   color: black;
   cursor: pointer;
   border: none;
@@ -162,8 +165,21 @@
   background-color: #990000;
 }
 
+.adminBtns {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
 .newClassBtn {
-  width: 35vw;
+  width: 40vw;
+  background-color: palegreen;
+}
+
+.deleteClassBtn {
+  width: 40vw;
+  background-color: #924b4b;
+  color: white;
 }
 
 .notAdmin {
@@ -171,7 +187,8 @@
 }
 
 .deleteClass {
-  background-color: red;
+  background-color: rgba(255, 0, 0, 0.7);
+  color: white;
 }
 
 .activeClass:hover {
@@ -212,6 +229,6 @@
     border-width: 1px 1px 0;
   }
   .deleteClass {
-    background-color: red;
+    background-color: #924b4b;
   }
 }
