--- a/src/components/shared/footer/footer.module.css
+++ b/src/components/shared/footer/footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 0.1vh solid #ff0000;
+  border-top: 0.1vh solid #924b4b;
   padding: 0 2vw;
   background-color: rgba(0, 0, 0, 0.8);
   height: 9.9vh;
@@ -73,4 +73,10 @@
   width: 20px;
   height: 20px;
   background-color: white;
+}
+
+@media only screen and (min-width: 701px) {
+  .footer {
+    height: 8vh;
+  }
 }
