--- a/src/components/admin/contracts/list/list.module.css
+++ b/src/components/admin/contracts/list/list.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 98vw;
-  color: white;
+  color: #999;
   margin: 20px 0;
   border-radius: 10px;
   border: 1px solid #924b4b;
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
 }
 
 .titleList {
@@ -28,7 +29,7 @@
   display: flex;
   width: 90vw;
   justify-content: space-between;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #999;
   margin-bottom: 10px;
 }
 
@@ -78,7 +79,14 @@
 
 .addBtn {
   font-size: 12px;
-  background-color: palegreen;
+  background-color: #a5ec9a;
+  color: #444;
+}
+
+.contractPInfo {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
 }
 
 .addBtn:hover {
@@ -91,8 +99,4 @@
 
 .contractP {
   margin: 10px;
-}
-
-.contractPrice {
-  align-self: flex-end;
 }
