--- a/src/components/admin/trainers/form/form.module.css
+++ b/src/components/admin/trainers/form/form.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 98vw;
-  color: white;
+  color: #999;
   margin: 20px;
   border-radius: 10px;
   border: 1px solid #924b4b;
@@ -66,20 +66,22 @@
 
 .cancelBtn {
   background-color: #924b4b;
-  color: white;
+  color: #999;
 }
 
 .addBtn {
   background-color: palegreen;
+  color: #444;
 }
 
 .btn {
   width: 30vw;
   height: 40px;
+  color: #999;
 }
 
 .btn:hover {
-  box-shadow: 0 0 5px white;
+  box-shadow: 0 0 5px #999;
 }
 
 .error {
