--- a/src/components/landing/landing.module.css
+++ b/src/components/landing/landing.module.css
@@ -18,10 +18,12 @@
 
 .button {
   margin-top: 30vw;
+  color: #999;
 }
 
 .btn {
   border: 1px solid black;
+  color: #999;
 }
 
 .card {
@@ -29,7 +31,7 @@
   flex-direction: column;
   align-items: center;
   margin: 50px 0;
-  border: 2px solid white;
+  border: 2px solid #999;
   border-radius: 20px;
   height: 450px;
   width: 250px;
@@ -55,7 +57,7 @@
   width: 220px;
   font-size: 15px;
   margin-top: 10px;
-  color: white;
+  color: #999;
   text-wrap: pretty;
 }
 
@@ -72,7 +74,7 @@
   .btn:hover {
     border-color: #924b4b;
     background-color: black;
-    color: white;
+    color: #999;
   }
 
   .containerCards {
