--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -17,7 +17,7 @@
   border: 1px solid #924b4b;
   padding-bottom: 35px;
   background-color: rgba(0, 0, 0, 0.7);
-  color: white;
+  color: #999;
 }
 
 .formField {
@@ -29,20 +29,21 @@
 
 .cancelBtn {
   background-color: #924b4b;
-  color: white;
+  color: #999;
   width: 30vw;
   height: 40px;
 }
 
 .addBtn {
   order: 2;
-  background-color: palegreen;
+  background-color: #a5ec9a;
   width: 30vw;
   height: 40px;
+  color: #444;
 }
 
 .btn:hover {
-  box-shadow: 0 0 5px white;
+  box-shadow: 0 0 5px #999;
 }
 
 .formLabel {
@@ -53,6 +54,7 @@
   height: 25px;
   border-radius: 8px;
   border: none;
+  background-color: #999;
 }
 
 .formBtns {
@@ -60,6 +62,7 @@
   justify-content: space-around;
   gap: 20px;
   width: 70vw;
+  color: #999;
 }
 
 .error {
