--- a/src/components/shared/footer/footer.module.css
+++ b/src/components/shared/footer/footer.module.css
@@ -6,7 +6,7 @@
   padding: 0 2vw;
   background-color: rgba(0, 0, 0, 0.8);
   height: 9.9vh;
-  color: white;
+  color: #999;
 }
 
 .address {
@@ -72,11 +72,11 @@
   align-items: center;
   width: 20px;
   height: 20px;
-  background-color: white;
+  background-color: #999;
 }
 
 @media only screen and (min-width: 701px) {
   .footer {
-    height: 8vh;
+    height: 12vh;
   }
 }
