--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(114, 114, 114, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -15,7 +15,6 @@
 }
 
 body {
-  min-height: 100vh;
   margin: 0;
   background-image: url('../public/assets/images/background.jpeg');
   background-repeat: no-repeat;
@@ -33,8 +32,9 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  background-color: #1a1a1a;
+  background-color: #222;
   cursor: pointer;
+  color: #444;
   transition: border-color 0.25s;
 }
 
